@@ -27,11 +27,8 @@ define( function( require ) {
   var PhetFont = require( 'SCENERY_PHET/PhetFont' );
   var Text = require( 'SCENERY/nodes/Text' );
   var BCEQueryParameters = require( 'BALANCING_CHEMICAL_EQUATIONS/common/BCEQueryParameters' );
+  var GamePlayNode = require( 'BALANCING_CHEMICAL_EQUATIONS/game/view/GamePlayNode' );
   var PropertySet = require( 'AXON/PropertySet' );
-
-  // strings
-  var checkString = require( 'string!BALANCING_CHEMICAL_EQUATIONS/check' );
-  var nextString = require( 'string!BALANCING_CHEMICAL_EQUATIONS/next' );
 
   // Constants
   var BOX_SIZE = new Dimension2( 285, 340 );
@@ -56,7 +53,6 @@ define( function( require ) {
     this.model = model;
     this.audioPlayer = new GameAudioPlayer( this.viewProperties.soundEnabledProperty );
     this.aligner = new HorizontalAligner( this.layoutBounds.width, BOX_SIZE.width, BOX_X_SPACING );
-    this.feedbackDialog = null; // feedback dialog, tells user how they did on a challenge
 
     // Add a root node where all of the game-related nodes will live.
     this.rootNode = new Node();
@@ -66,132 +62,21 @@ define( function( require ) {
     this.levelSelectionNode = new LevelSelectionNode( this.model, this.viewProperties, this.layoutBounds, { visible: false } );
     this.rootNode.addChild( this.levelSelectionNode );
 
-    // game-play interface, all the UI elements for a challenge
-    this.gamePlayNode = new Node( { visible: false } );
-    this.rootNode.addChild( this.gamePlayNode );
+    // game-play interface, all the UI elements for a challenge, created on demand
+    this.gamePlayNode = null;
 
-    // Scoreboard bar at the top of the screen
-    var scoreboard = new ScoreboardBar(
-      this.layoutBounds.width,
-      model.currentEquationIndexProperty,
-      model.numberOfEquationsProperty,
-      model.levelProperty,
-      model.pointsProperty,
-      model.timer.elapsedTimeProperty,
-      this.viewProperties.timerEnabledProperty,
-      self.model.newGame.bind( self.model ),
-      {
-        font: new PhetFont( 14 ),
-        yMargin: 5,
-        leftMargin: 30,
-        rightMargin: 30,
-        centerX: this.layoutBounds.centerX,
-        top: this.layoutBounds.top
-      }
-    );
-    this.gamePlayNode.addChild( scoreboard );
-
-    // boxes that show molecules corresponding to the equation coefficients
-    this.boxesNode = new BoxesNode( model.currentEquationProperty, model.COEFFICENTS_RANGE, this.aligner,
-      BOX_SIZE, BCEConstants.BOX_COLOR, this.viewProperties.reactantsBoxExpandedProperty, this.viewProperties.productsBoxExpandedProperty,
-      { y: scoreboard.bottom + 15 } );
-    this.gamePlayNode.addChild( this.boxesNode );
-
-    // Equation
-    this.equationNode = new EquationNode( this.model.currentEquationProperty, this.model.COEFFICENTS_RANGE, this.aligner );
-    this.gamePlayNode.addChild( this.equationNode );
-    this.equationNode.centerY = this.layoutBounds.height - ( this.layoutBounds.height - this.boxesNode.bottom ) / 2;
-
-    // buttons: Check, Next, Try Again, Show Answer
-    var BUTTONS_OPTIONS = {
-      baseColor: 'yellow',
-      centerX: 0,
-      bottom: this.boxesNode.bottom
-    };
-    this.checkButton = new TextPushButton( checkString, _.extend( BUTTONS_OPTIONS, {
-      listener: function() {
-        self.playGuessAudio();
-        self.model.check();
-      }
-    } ) );
-    this.nextButton = new TextPushButton( nextString, _.extend( BUTTONS_OPTIONS, {
-      listener: function() {
-        self.model.next();
-      }
-    } ) );
-
-    // scale buttons uniformly to fit the horizontal space between the boxes, see issue #68
-    var buttonsParent = new Node( { children: [ this.checkButton, this.nextButton ] } );
-    buttonsParent.setScaleMagnitude( Math.min( 1, 0.85 * BOX_X_SPACING / buttonsParent.width ) );
-    buttonsParent.centerX = this.layoutBounds.centerX;
-    buttonsParent.bottom = this.boxesNode.bottom;
-    this.gamePlayNode.addChild( buttonsParent );
-
-    // Monitor the game state and update the view accordingly.
+    // Call an initializer to set up the game for the state.
     model.stateProperty.link( function( state ) {
-
-      // interactivity enabled only when the 'Check' button is visible
-      self.equationNode.pickable = ( state === self.model.states.CHECK );
-
-      // call an initializer to setup the game for the state
-      var states = model.states;
-      switch( state ) {
-        case states.LEVEL_SELECTION:
-          self.initLevelSelection();
-          break;
-        case states.START_GAME:
-          self.initStartGame();
-          break;
-        case states.CHECK:
-          self.initCheck();
-          break;
-        case states.TRY_AGAIN:
-          self.initTryAgain();
-          break;
-        case states.SHOW_ANSWER:
-          self.initShowAnswer();
-          break;
-        case states.NEXT:
-          self.initNext();
-          break;
-        case states.LEVEL_COMPLETED:
-          self.initLevelCompleted();
-          break;
-        default:
-          throw new Error( 'unsupported state: ' + state );
+      if ( state === model.states.LEVEL_SELECTION ) {
+        self.initLevelSelection();
+      }
+      else if ( state === model.states.START_GAME ) {
+        self.initStartGame();
+      }
+      else if ( state === model.states.LEVEL_COMPLETED ) {
+        self.initLevelCompleted();
       }
     } );
-
-    // Disable 'Check' button when all coefficients are zero.
-    var coefficientsSumObserver = function( coefficientsSum ) {
-      self.checkButton.enabled = ( coefficientsSum > 0 );
-    };
-    model.currentEquationProperty.link( function( newEquation, oldEquation ) {
-      if ( oldEquation ) { oldEquation.coefficientsSumProperty.unlink( coefficientsSumObserver ); }
-      if ( newEquation ) { newEquation.coefficientsSumProperty.link( coefficientsSumObserver ); }
-    } );
-
-    if ( BCEQueryParameters.DEV ) {
-
-      // display correct coefficient at bottom center of the screen
-      var answerNode = new Text( '', { font: new PhetFont( 12 ), bottom: this.layoutBounds.bottom - 5 } );
-      this.gamePlayNode.addChild( answerNode );
-      this.model.currentEquationProperty.link( function( equation ) {
-        answerNode.text = equation.getCoefficientsString();
-        answerNode.centerX = self.layoutBounds.centerX;
-      } );
-
-      // skips the current equation
-      var skipButton = new TextPushButton( 'Skip', {
-        font: new PhetFont( 10 ),
-        baseColor: 'red',
-        textFill: 'white',
-        listener: model.next.bind( model ), // equivalent to 'Next'
-        left: this.layoutBounds.left + 4,
-        bottom: this.layoutBounds.bottom - 2
-      } );
-      this.gamePlayNode.addChild( skipButton );
-    }
   }
 
   return inherit( ScreenView, GameView, {
@@ -203,42 +88,20 @@ define( function( require ) {
     },
 
     initLevelSelection: function() {
-      this.gamePlayNode.visible = false;
+      if ( this.gamePlayNode ) { this.gamePlayNode.visible = false; }
       this.levelSelectionNode.visible = true;
     },
 
     initStartGame: function() {
+      if ( !this.gamePlayNode ) {
+        this.gamePlayNode = new GamePlayNode( this.model, this.viewProperties, this.audioPlayer, this.layoutBounds, this.aligner, BOX_SIZE, BOX_X_SPACING );
+        this.rootNode.addChild( this.gamePlayNode );
+      }
       this.viewProperties.reactantsBoxExpandedProperty.reset();
       this.viewProperties.productsBoxExpandedProperty.reset();
       this.levelSelectionNode.visible = false;
       this.gamePlayNode.visible = true;
       this.model.startGame();
-    },
-
-    initCheck: function() {
-      this.checkButton.visible = true;
-      this.nextButton.visible = false;
-      this.setFeedbackDialogVisible( false );
-      this.setBalancedHighlightEnabled( false );
-    },
-
-    initTryAgain: function() {
-      this.checkButton.visible = false;
-      this.setFeedbackDialogVisible( true );
-    },
-
-    initShowAnswer: function() {
-      this.checkButton.visible = false;
-      this.setFeedbackDialogVisible( true );
-    },
-
-    initNext: function() {
-      var correct = this.model.currentEquation.balancedAndSimplified;
-      this.nextButton.visible = ( !correct );
-      this.checkButton.visible = false;
-      this.setFeedbackDialogVisible( correct );
-      this.setBalancedHighlightEnabled( true );
-      this.model.currentEquation.balance(); // show the correct answer
     },
 
     initLevelCompleted: function() {
@@ -287,42 +150,6 @@ define( function( require ) {
       }
       else {
         this.audioPlayer.gameOverImperfectScore();
-      }
-    },
-
-    /*
-     * Turns on/off the highlighting feature that indicates whether the equation is balanced.
-     * We need to be able to control this so that a balanced equation doesn't highlight
-     * until after the user presses the Check button.
-     */
-    setBalancedHighlightEnabled: function( enabled ) {
-      this.equationNode.setBalancedHighlightEnabled( enabled );
-      this.boxesNode.setBalancedHighlightEnabled( enabled );
-    },
-
-    playGuessAudio: function() {
-      if ( this.model.currentEquation.balancedAndSimplified ) {
-        this.audioPlayer.correctAnswer();
-      }
-      else {
-        this.audioPlayer.wrongAnswer();
-      }
-    },
-
-    /**
-     * Controls the visibility of the game feedback dialog.
-     * This tells the user whether their guess is correct or not.
-     * @param visible
-     */
-    setFeedbackDialogVisible: function( visible ) {
-      if ( this.feedbackDialog !== null ) {
-        this.gamePlayNode.removeChild( this.feedbackDialog );
-        this.feedbackDialog = null;
-      }
-      if ( visible ) {
-        this.feedbackDialog = new GameFeedbackDialog( this.model, this.aligner,
-          { centerX: this.layoutBounds.centerX, top: this.boxesNode.top + 10 } );
-        this.gamePlayNode.addChild( this.feedbackDialog ); // visible and in front
       }
     }
   } );
